--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -103,8 +103,10 @@ input {
 .nutBackGround {
   background-image: url(https://img.mensxp.com/media/content/2018/Jul/there-no-such-thing-as-good-food-and-bad-food-1400x653-1531487950.jpg);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: 110vh;
 }
 .deal {
   color: rgb(29, 149, 204);
@@ -118,8 +120,10 @@ input {
 .supBackGround {
   background-image: url(https://www.mensjournal.com/wp-content/uploads/2021/04/proteinpowdermain.jpg?w=1800&h=1012&crop=1&quality=86&strip=all);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: 110vh;
 }
 .supDeal {
   color: rgb(250, 249, 246);
