--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -73,12 +73,16 @@ input {
 .homeBackGround {
   background-image: url(https://cdn.dribbble.com/users/1692428/screenshots/9770125/media/6bb2a6119e1e50333208bf26a0826a75.jpg?compress=1&resize=400x300);
   background-size: cover;
+  background-position: center;
+  /* background-repeat: no-repeat; */
   width: 100%;
   height: 100vh;
 }
 .authBackGround {
   background-image: url(https://i.pinimg.com/originals/32/1c/e9/321ce9f5f48596a733d91e8f8d269808.jpg);
   background-size: cover;
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
   width: 100%;
   height: 100vh;
 }
@@ -104,7 +108,7 @@ input {
   background-image: url(https://img.mensxp.com/media/content/2018/Jul/there-no-such-thing-as-good-food-and-bad-food-1400x653-1531487950.jpg);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   width: 100%;
   height: 110vh;
 }
