--- a/src/pages/NutritionPage/Nutrition.css
+++ b/src/pages/NutritionPage/Nutrition.css
@@ -1,15 +1,16 @@
-.NutritionPages{
-    text-align: center;
-}
 
-@media (min-width: 480px) , (max-width: 1024px) {
-    body  {
-     background-image: url(https://img.mensxp.com/media/content/2018/Jul/there-no-such-thing-as-good-food-and-bad-food-1400x653-1531487950.jpg);
+
+@media (min-width: 480px) and (max-width: 1400px) {
+    .nutBackGround{
+    
+     background-image:  url(https://img.mensxp.com/media/content/2018/Jul/there-no-such-thing-as-good-food-and-bad-food-1400x653-1531487950.jpg) !important;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
      background-attachment: fixed;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
-     
-     height: 100vh;
+     height: 300vh;
    }
  }
