--- a/src/pages/SuppsPage/Supps.css
+++ b/src/pages/SuppsPage/Supps.css
@@ -1,15 +1,15 @@
 .SuppsPages {
 text-align: center;
 }
-@media (min-width: 480px) , (max-width: 1024px) {
-    body  {
-     background-image: url(https://www.mensjournal.com/wp-content/uploads/2021/04/proteinpowdermain.jpg?w=1800&h=1012&crop=1&quality=86&strip=all);
+@media (min-width: 480px) and (max-width: 1400px) {
+  .supBackGround{
+     background-image: url(https://www.mensjournal.com/wp-content/uploads/2021/04/proteinpowdermain.jpg?w=1800&h=1012&crop=1&quality=86&strip=all) !important ;
      background-attachment: fixed;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
      
-     height: 100vh;
+     height: 300vh;
    }
  }
 
