--- a/src/pages/WorkOutPage/WorkOut.css
+++ b/src/pages/WorkOutPage/WorkOut.css
@@ -2,14 +2,13 @@
     text-align: center;
 }
 
-@media (min-width: 480px) , (max-width: 1024px) {
-    body  {
-     background-image: url(https://img1.goodfon.com/original/1920x1168/7/26/shtanga-trenazhernyy-zal-gym.jpg);
+@media (min-width: 480px) and (max-width: 1400px) {
+    .workOutBackGround { 
+     background-image: url(https://img1.goodfon.com/original/1920x1168/7/26/shtanga-trenazhernyy-zal-gym.jpg) !important ;
      background-attachment: fixed;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
-     
-     height: 100vh;
+     height: 300vh;
    }
  }
