--- a/src/pages/SuppsPage/Supps.css
+++ b/src/pages/SuppsPage/Supps.css
@@ -13,4 +13,8 @@ text-align: center;
    }
  }
 
- 
+ @media (min-width: 0) and (max-width: 480px) {
+  .supBackGround { 
+   background-color: rgb(82,113,125) ;
+ }
+}
