--- a/src/pages/NutritionPage/Nutrition.css
+++ b/src/pages/NutritionPage/Nutrition.css
@@ -18,5 +18,12 @@
  @media (min-width: 0) and (max-width: 480px) {
   .nutBackGround { 
    background-color: rgb(234,234,234) ;
+   -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-attachment: fixed;
+     background-size: cover;
+     background-position: center;
+     height: 300vh;
  }
 }
