--- a/src/pages/SuppsPage/Supps.css
+++ b/src/pages/SuppsPage/Supps.css
@@ -16,5 +16,12 @@ text-align: center;
  @media (min-width: 0) and (max-width: 480px) {
   .supBackGround { 
    background-color: rgb(82,113,125) ;
+   -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-attachment: fixed;
+     background-size: cover;
+     background-position: center;
+     height: 300vh;
  }
 }
