--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -217,12 +217,16 @@ flex-direction: column;
  
 }
 
-
-
-
+.imgWorkOuts{
   
+  justify-content: space-evenly;
+  height: 30vh;
+  border-radius: 50px;
+  cursor: pointer;
+  margin: 10px; 
+}
 
-/* .create-body{
 
-  
-  } */
+
+
+
